Elimination of generics.